<?xml version="1.0"?>
<package format="2">
  <name>obstacle_layer_laser_undistortion</name>
  <version>1.0.0</version>
  <description>ObstacleLayer with undistortion for rotating lidars data.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="1121391435@qq.com">WLwind</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <costmap_2d plugin="${prefix}/obstacle_undistortion_plugin.xml" />
  </export>
</package>
